--- a/less/style.less
+++ b/less/style.less
@@ -2,3 +2,5 @@
 @import "global/variables.less";
 @import "global/fonts.less";
 @import "global/global.less";
+@import "blocks/page-header.less";
+@import "blocks/main-nav.less";
