change color in navigation

--- a/less/blocks/main-nav.less
+++ b/less/blocks/main-nav.less
@@ -1,5 +1,6 @@
 .main-nav {
-
+  background-color: #ff3;
+  padding: 10px 4px;
 }
 
 .main-nav__list {
@@ -7,5 +8,6 @@
 }
 
 .main-nav__item {
-  
+   font-size: 30px;
+   line-height: 35px;
 }
