add main-nav from work mashine)

--- a/less/blocks/main-nav.less
+++ b/less/blocks/main-nav.less
@@ -11,3 +11,9 @@
    font-size: 30px;
    line-height: 35px;
 }
+
+.main-nav__item:last-child {
+  font-size: 15px;
+  line-height: 20px;
+  font-style: italic;
+}
