--- a/less/blocks/main-nav.less
+++ b/less/blocks/main-nav.less
@@ -16,4 +16,9 @@
   font-size: 15px;
   line-height: 20px;
   font-style: italic;
+}  
+
+.page-header {
+  padding: 20px;
+  background-color: #cd8;
 }
