создал новую ветку для теста

--- a/less/blocks/main-nav.less
+++ b/less/blocks/main-nav.less
@@ -21,4 +21,11 @@
 .page-header {
   padding: 20px;
   background-color: #cd8;
+  margin: 0 auto;
+}
+
+.page-header__title {
+  font-size: 33px;
+  line-height: 36px;
+  color: blue;
 }
